@@ -1,3 +1,9 @@
+2004-02-01  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSTextFieldCell.m (-setBackgroundColor:,
+	-setDrawsBackground:, setTextColor:) tell the control, that the
+	cell did update.
+	
 2004-01-30  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSBrowser.m
